--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
     <div id="sq3" class="sq"></div> -->
     
 
-    <input type="text" id="inp">
+    <!-- <input type="text" id="inp">
     <br>
     <input type="text" id="inp2">
     <br>
     <button id="btn">Вычисли</button>
-    <div class="result" id="result"></div>
+    <div class="result" id="result"></div> -->
+
+
+    <div id="circle" class="circle"></div>
 
     <script src="script.js"></script>
 </body>
