--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
     <div class="result" id="result"></div> -->
 
 
-    <div id="circle" class="circle"></div>
+    <!-- <div id="circle" class="circle"></div> -->
+<div class="wrapper">
+    <div class="container">
+        <img src="pic1.jpg" alt="">
+        <img src="pic2.jpg" alt="">
+        <img src="pic3.jpg" alt="">
+    </div>
+</div>
+
+<button id="btn">Дальше</button>
+
 
     <script src="script.js"></script>
 </body>
